[package]
name = "dca-integration"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dca_integration"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0" }
jupiter-dca = { git = "https://github.com/jup-ag/dca-cpi", rev = "4c8fcdf" }

# anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "c7c7319", features = ["init-if-needed"] }
# anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", rev = "c7c7319" }
# jupiter-dca = { git = "https://github.com/jup-ag/dca-cpi", rev = "54ee9a1" }

# cargo update -p solana-zk-token-sdk --precise 1.14.19
# cargo update -p borsh@0.10.3 --precise 0.9.3
# cargo update -p solana-program@1.16.9 --precise 1.14.24
